vault-mini/manifests/1_deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app 
  template:
    metadata:
      labels:
        app: app 
    spec:
      containers:
        - name: app 
          image: iypetrov/ghtmx:1.5.1
          ports:
            - containerPort: 8080
              name: http
