vault-mini/manifests/2_services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: app
